adding purple circle

--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -11,7 +11,16 @@ div {
 
 .greeting {
     color: #006400;
-    font-family: Courier;
+    font-family: Cursive;
     font-size: 24px;
     text-align: center;
+}
+
+div2 {
+  height: 350px;
+  width: 350px;
+  background-color: #7b68ee;
+  border-radius: 100%
+  border: 5px dashed #191970;
+
 }
