--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -20,7 +20,7 @@ div {
   height: 350px;
   width: 350px;
   background-color: #7b68ee;
-  border-radius: 100%
+  border-radius: 100%;
   border: 5px dashed #191970;
 
 }
