--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -14,6 +14,7 @@ div {
     font-family: Cursive;
     font-size: 24px;
     text-align: center;
+    display: inline;
 }
 
 #border {
@@ -22,5 +23,7 @@ div {
   background-color: #7b68ee;
   border-radius: 100%;
   border: 5px dashed #191970;
+  position: fixed;
+  display: inline;
 
 }
