--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -12,8 +12,8 @@ div {
 
 .greeting {
     color: #006400;
-    font-family: Cursive;
-    font-size: 24px;
+    font-family: Serif;
+    font-size: 60px;
     text-align: center;
     margin: auto
 
