--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -15,7 +15,7 @@ div {
     font-family: Serif;
     font-size: 50px;
     text-align: center;
-    margin: auto
+    margin: auto;
     padding: 30px;
 
 }
