--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -1,7 +1,14 @@
 h1 {
-  font-family: Blippo;
+  font-family: Cursive;
   font-size: 30px;
   color: #6b8e23;
+  text-align: center;
+}
+
+h2 {
+  font-size: 24px;
+  font-family: Serif;
+  color: #808000;
   text-align: center;
 }
 
