--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -18,3 +18,12 @@ img {
     border: 8px solid #556b2f;
 
 }
+
+div {
+  background-color: #6b8e23;
+  height: 200px;
+  width: 350px;
+  border: 5px solid 9acd32;
+  border-radius: 35%;
+
+}
