--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -23,7 +23,7 @@ div {
   background-color: #6b8e23;
   height: 200px;
   width: 350px;
-  border: 5px solid 9acd32;
+  border: 5px solid #9acd32;
   border-radius: 35%;
 
 }
