--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -7,8 +7,8 @@ h1 {
 
 h2 {
   font-size: 18px;
-  font-family: Serif;
-  color: #808000;
+  font-family: Cursive;
+  color: #6b8e23;
   text-align: center;
 }
 
@@ -26,6 +26,6 @@ div {
   border: 5px solid #9acd32;
   border-radius: 10%;
   margin: auto;
-  
+
 
 }
