--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -16,7 +16,9 @@ img {
 
     border-radius: 100%;
     border: 8px solid #556b2f;
-    image-orientation: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
