--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -42,3 +42,13 @@ div {
   display: inline block;
 
 }
+
+#upperright {
+  background-color: #2e8b57;
+  border: 6px solid #98fb98;
+  height: 100px;
+  width: 100px;
+  border-radius: 100%;
+  float: left;
+  display: inline block;
+}
