--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -8,7 +8,7 @@ div {
     margin: auto;
     vertical-align: middle;
     display: inline block;
-    position: fixed;
+    position: absolute;
 
 
 }
