--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -62,7 +62,7 @@ div {
   height: 50px;
   width: 50px;
   border-radius: 100%;
-  float: left;
+  float: right;
   display: inline-block;
 
 }
@@ -74,7 +74,7 @@ div {
   height: 50px;
   width: 50px;
   border-radius: 100%;
-  float: left;
+  float: right;
   display: inline-block;
 
 
