--- a/ps-02/index.css
+++ b/ps-02/index.css
@@ -8,13 +8,14 @@ div {
     margin: auto;
     vertical-align: middle;
     display: inline-block;
+    clear: none;
 
 
 }
 
 .greeting {
     color: #006400;
-    font-family: monospace;
+    font-family: Cursive;
     font-size: 30px;
     text-align: center;
     margin: auto;
@@ -24,7 +25,7 @@ div {
 
 .title {
     color: white;
-    font-family: monospace;
+    font-family: Cursive;
     font-size: 18px;
     text-align: center;
     vertical-align: middle;
@@ -64,7 +65,7 @@ div {
   width: 50px;
   border-radius: 100%;
   float: right;
-  display: inline-block;
+  display: inline;
 
 
 }
@@ -77,7 +78,7 @@ div {
   width: 50px;
   border-radius: 100%;
   float: right;
-  display: inline-block;
+  display: inline;
   clear: right;
 
 
