--- a/ps-02/profile.css
+++ b/ps-02/profile.css
@@ -11,10 +11,18 @@ h1 {
 }
 
 h2 {
+  font-size: 16px;
+  font-family: Cursive;
+  color: #6b8e23;
+  text-align: center;
+}
+
+h3 {
   font-size: 18px;
   font-family: Cursive;
   color: #6b8e23;
   text-align: center;
+  padding: -10px;
 }
 
 img {
