--- a/ps-02/squares.css
+++ b/ps-02/squares.css
@@ -20,6 +20,7 @@ body {
     height: 60px;
     width: 60px;
     margin: auto;
+    clear: left;
 
 
 
@@ -31,7 +32,9 @@ body {
     height: 150px;
     width: 150px;
     float: right;
+    clear: both;
     
+
 
 
 
