--- a/ps-02/squares.css
+++ b/ps-02/squares.css
@@ -11,7 +11,7 @@ body {
     margin-top: 40px;
     margin-left: 40px;
     float: left;
-    display: inline-block;
+    display: block;
     z-index: 1;
 
 }
@@ -23,7 +23,7 @@ body {
     width: 60px;
     margin: auto;
     clear: both;
-    display: inline-block;
+    display: block;
     z-index: 2;
 
 
@@ -33,12 +33,13 @@ body {
 #large {
     background-color: #000000;
     border: 20px solid #ffffff;
-    height: 150px;
-    width: 150px;
+    height: 300px;
+    width: 300px;
     float: right;
-    clear: both;
-    display: inline-block;
+    clear: left;
+    display: block;
     z-index: 3;
+    margin-top: 500px;
 
 
 
