--- a/ps-02/squares.css
+++ b/ps-02/squares.css
@@ -32,7 +32,7 @@ body {
 }
 
 #large {
-    background-color: #000000;
+    background-color: #c0c0c0;
     border: 20px solid #ffffff;
     height: 220px;
     width: 300px;
@@ -41,6 +41,7 @@ body {
     display: block;
     z-index: 3;
     margin-top: 500px;
+    margin-left: 500px;
 
 
 
