--- a/ps-02/loud.css
+++ b/ps-02/loud.css
@@ -1,4 +1,28 @@
 body {
   background-color: #0000ff;
+}
+
+#L {
+  height: 400px;
+  width: 200px;
+  background-color: #1e90ff;
+  border: 10px dashed #00ffff;
+  
+
+}
+
+#O {
+
+
+}
+
+#U {
+
+
+}
+
+#D {
+
+
 
 }
