--- a/ps-02/loud.css
+++ b/ps-02/loud.css
@@ -44,6 +44,17 @@ body {
 }
 
 #D {
+  height: 400px;
+  width: 200px;
+  background-color: #afeeee;
+  border: 10px solid #00ced1;
+  text-align: center;
+  font-family: cursive;
+  color: blue;
+  font-size: 300px;
+
+
+
 
 
 
