--- a/ps-02/loud.css
+++ b/ps-02/loud.css
@@ -11,6 +11,7 @@ body {
   font-family: Courier;
   font-size: 350px;
   color: blue;
+  display: inline-block;
 
 
 
@@ -25,6 +26,7 @@ body {
   font-family: Serif;
   color: blue;
   font-size: 270px;
+  display: inline-block;
 
 
 
@@ -51,7 +53,7 @@ body {
   text-align: center;
   font-family: cursive;
   color: blue;
-  font-size: 300px;
+  font-size: 250px;
 
 
 
