inline for u and d

--- a/ps-02/loud.css
+++ b/ps-02/loud.css
@@ -41,6 +41,7 @@ body {
     font-family: Arial;
     color: blue;
     font-size: 300px;
+    display: inline-block;
 
 
 }
@@ -54,6 +55,7 @@ body {
   font-family: cursive;
   color: blue;
   font-size: 250px;
+  display: inline-block;
 
 
 
