--- a/ps-02/loud.css
+++ b/ps-02/loud.css
@@ -12,6 +12,8 @@ body {
   font-size: 350px;
   color: blue;
   display: inline-block;
+  margin-top: 200px;
+  margin-left: 200px;
 
 
 
@@ -27,6 +29,7 @@ body {
   color: blue;
   font-size: 270px;
   display: inline-block;
+  margin-top: -30px;
 
 
 
@@ -54,7 +57,7 @@ body {
   text-align: center;
   font-family: cursive;
   color: blue;
-  font-size: 250px;
+  font-size: 220px;
   display: inline-block;
 
 
