--- a/ps-02/tag.css
+++ b/ps-02/tag.css
@@ -1,9 +1,46 @@
-h1 {
+body {
+
 
 
 }
 
+h1 {
+  text-align: center;
+
+}
+
 h2 {
+  text-align: center;
+
+
+
+
+}
+
+p {
+  text-align: center;
+
+}
+
+.start {
+  text-align: center;
+
+}
+
+div {
+  background-color: #dcdcdc;
+  margin: auto;
+
+}
+
+ol {
+
+
+
+}
+
+li {
+
 
 
 
