--- a/ps-02/tag.css
+++ b/ps-02/tag.css
@@ -1,37 +1,46 @@
 body {
-
-
+  background-color: #dcdcdc;
 
 }
 
 h1 {
   text-align: center;
+  font-family: Cursive;
+  color: #696969;
+  font-size: 48px;
 
 }
 
 h2 {
   text-align: center;
-
-
+  font-size: 35px;
+  color: #696969;
 
 
 }
 
 p {
   text-align: center;
+  font-size: 20px;
+  color: #696969;
+
 
 }
 
 .start {
   text-align: center;
+  font-size: 28px;
+  color: #2f4f4f;
+
 
 }
 
 div {
-  background-color: #dcdcdc;
+  background-color: #c0c0c0;
   margin: auto;
   height: 250px;
   width: 500px;
+  border: 2px solid #000000;
 
 
 }
