--- a/ps-03/index.css
+++ b/ps-03/index.css
@@ -1,22 +1,29 @@
 div {
   width: 48%;
-  height: 45%;
+  height: 60%;
   border: 5px solid #d3d3d3;
   margin: auto;
+  margin-top: 10%;
   padding: 25px;
   background-color: #696969;
 
-
 }
 
-p {
+#first {
+
   font-family: serif;
   font-color: #dcdcdc;
-  font-size: 15%;
+  font-size: 40%;
+
 
 }
 
 #link {
-
-
+  width: 32%;
+  height: 60%;
+  border: 5px solid #696969;
+  margin: auto;
+  padding: 25px;
+  background-color: #d3d3d3;
+  text-align: center
 }
