--- a/ps-03/index.css
+++ b/ps-03/index.css
@@ -4,39 +4,63 @@ body {
 }
 
 #set {
-  width: 48%;
-  height: 80%;
+  width: 40%;
+  height: 110%;
   border: 5px solid #d3d3d3;
   margin: auto;
   margin-top: 10%;
   padding: 25px;
   background-color: #696969;
+  text-align: center;
 
 }
 
 #first {
 
-  font-family: serif;
-  font-color: #dcdcdc;
-  font-size: 40%;
+  font-family: Serif;
+  font-color: #f0f8ff;
+  font-size: 14;
 
 
 }
 
 #link {
-  width: 25%;
-  height: 32%;
+  width: 18%;
+  height: 25%;
   border: 3px solid #696969;
   margin: auto;
   margin-top: 12%;
   padding: 25px;
   background-color: #d3d3d3;
-  text-align: center
+  text-align: center;
+
+
+}
+
+#second {
+
+  text-decoration: none;
+  font-family: Fantasy;
+  font-size: 12;
+  color: #f0f8ff;
+}
+
+a:link {
+  color: #f0f8ff;
+  text-decoration: none;
+
+
+}
+
+a:hover {
+
+  color: #B0C4DE;
+  font-weight: bold;
+  font-size: 16;
+
 }
 
 
-#second {
-  text-decoration: none;
 
 
 }
