--- a/ps-03/index.css
+++ b/ps-03/index.css
@@ -1,65 +1,21 @@
 body {
-  background-color: #f0f8ff;
-
+  background-color: #e0ffff;
 }
 
-#set {
+.name {
   width: 40%;
-  height: 110%;
-  border: 5px solid #d3d3d3;
-  margin: auto;
-  margin-top: 10%;
-  padding: 25px;
-  background-color: #696969;
-  text-align: center;
+  height: 60%;
+  border: 5px solid #afeeee;
+  background-color: #dcdcdc;
 
 }
 
-#first {
-
-  font-family: Serif;
-  font-color: #f0f8ff;
-  font-size: 14;
+link {
 
 
 }
 
-#link {
-  width: 18%;
-  height: 25%;
-  border: 3px solid #696969;
-  margin: auto;
-  margin-top: 12%;
-  padding: 25px;
-  background-color: #d3d3d3;
-  text-align: center;
-
-
-}
-
-#second {
-
-  text-decoration: none;
-  font-family: Fantasy;
-  font-size: 12;
-  color: #f0f8ff;
-}
-
-a:link {
-  color: #f0f8ff;
-  text-decoration: none;
-
-
-}
-
-a:hover {
-
-  color: #B0C4DE;
-  font-weight: bold;
-  font-size: 16;
-
-}
-
+a {
 
 
 
