--- a/ps-03/index.css
+++ b/ps-03/index.css
@@ -1,22 +1,35 @@
 body {
-  background-color: #e0ffff;
+  background-color: #f0ffff;
 }
 
 .name {
   width: 40%;
   height: 60%;
-  border: 5px solid #afeeee;
-  background-color: #dcdcdc;
-
+  border: 3px solid #afeeee;
+  background-color: #f5f5f5;
+  color: #a9a9a9;
+  font-family: fantasy;
+  text-align: center;
+  margin: auto;
+  margin-top: 8%;
 }
 
-link {
-
-
+.link {
+  width: 20%;
+  height: 30%;
+  border: 1px dashed #a9a9a9;
+  background-color: #f0ffff;
+  margin: auto;
+  margin-top: 10%;
+  text-align: center;
+  color: #afeeee;
 }
 
-a {
+a:link {
+    text-decoration: none;
+}
 
-
-
+a:hover {
+    font-weight: bold;
+    color:#a9a9a9;
 }
