--- a/ps-03/index.css
+++ b/ps-03/index.css
@@ -13,6 +13,7 @@ body {
   margin: auto;
   margin-top: 8%;
   font-size: 1.5em;
+  font-weight:bold;
 }
 
 .link {
@@ -24,7 +25,7 @@ body {
   margin-top: 9%;
   text-align: center;
   color: #afeeee;
-  font-size: 1em;
+  font-size: 1.3em;
   font-family:fantasy;
 }
 
