--- a/ps-04/grid.css
+++ b/ps-04/grid.css
@@ -9,3 +9,13 @@ body {
   color: #c0c0c0;
   line-height: .2;
 }
+
+#myGrid {
+  border: 1px dashed #ffffff;
+  background-color: #d3d3d3;
+  margin-left: 10%;
+  margin-top: 10%;
+  height: 40%;
+  width: 60%;
+  transform: rotate(45deg);
+}
