change background color

--- a/ps-04/lines.css
+++ b/ps-04/lines.css
@@ -12,7 +12,7 @@ body {
 
 #lines {
   border: 1px solid #F0F8FF;
-  background-color: #696969;
+  background-color: #ffffff;
   height: 30%;
   width: 50%;
   margin-top: 5%;
