--- a/ps-04/connected.css
+++ b/ps-04/connected.css
@@ -9,3 +9,42 @@ body {
   color: #c0c0c0;
   line-height: .2;
 }
+
+.decor {
+  font-family:Amatic SC;
+  font-size: 2em;
+  display: flex;
+  margin-left: 38%;
+  margin-top: 5%;
+  color:#696969;
+}
+
+.decorII {
+  font-family:Amatic SC;
+  font-size: 2em;
+  display: flex;
+  margin-left: 39%;
+  margin-top: 5%;
+  color:#696969;
+  display: flex;
+}
+
+.decorIII {
+  font-family:Amatic SC;
+  font-size: 2em;
+  display: flex;
+  margin-left: 40%;
+  margin-top: 5%;
+  color:#696969;
+}
+
+
+#connected {
+  border: 5px dashed #F0FFFF;
+  background-color: #000000;
+  height: 30%;
+  width: 20%;
+  margin-top: 65%;
+  margin-left: 42%;
+  transform: rotate(60deg);
+}
