--- a/ps-04/grid.css
+++ b/ps-04/grid.css
@@ -18,3 +18,26 @@ body {
   height: 30%;
   width: 30%;
 }
+
+.back {
+  font-family: Gloria Hallelujah;
+  margin-top: 3%;
+  margin-left: 38%;
+  color: #c0c0c0;
+  font-size: .75em;
+  position: fixed;
+}
+
+a:link {
+  text-decoration: none;
+  color: #696969;
+}
+
+a:hover {
+  font-weight: bold;
+  color: #000000;
+}
+
+a:visited {
+  color: #008B8B;
+}
