--- a/ps-04/connected.css
+++ b/ps-04/connected.css
@@ -49,3 +49,17 @@ body {
   float: right;
   margin-right: 5%;
 }
+
+a:link {
+  text-decoration: none;
+  color: #696969;
+}
+
+a:hover {
+  font-weight: bold;
+  color: #000000;
+}
+
+a:visited {
+  color: #008B8B;
+}
