--- a/ps-07/index.css
+++ b/ps-07/index.css
@@ -1,7 +1,11 @@
-#name {
-  line-height: .3;
+body {
+  background-color: #FFA07A;
 }
 
+#name {
+  line-height: .3;
+  font-family: Amaranth;
+}
 
 h1 {
   font-family: Luckiest Guy;
@@ -9,10 +13,7 @@ h1 {
   margin-top: 3%;
 }
 
-
-
-
-
 #space {
   text-align: center;
+  font-family: Amaranth;
 }
