--- a/ps-07/index.css
+++ b/ps-07/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #FFA07A;
+  background-color: red;
 }
 
 #name {
@@ -16,4 +16,8 @@ h1 {
 #space {
   text-align: center;
   font-family: Amaranth;
+}
+
+#slot {
+  margin-left: 32%;
 }
