--- a/Phone-Case /about.css
+++ b/Phone-Case /about.css
@@ -3,10 +3,32 @@ body {
 }
 
 #top {
-  background-color: #9D9C9C;
+  background-color: #E5E5E5;
   width: 1425px;
   height: 175px;
-  text-align: right;
+  text-align: left;
   font-family: Open Sans Condensed;
   font-size: 1.25em;
+  display: inline-block;
+}
+
+#menu {
+  float: right;
+  text-align: right;
+  display: inline-block;
+}
+
+a:link {
+  color: #556B2F;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #556B2F;
+  font-weight: bold;
+}
+
+a:visited {
+  color: #556B2F;
+  text-decoration: line-through;
 }
