--- a/Phone-Case /home.css
+++ b/Phone-Case /home.css
@@ -18,15 +18,23 @@ body {
   display: inline-block;
 }
 
+#product {
+  width: 1425px;
+  height: 300px;
+  background-color: #C4C4C4;
+}
+
 a:link {
-  color:
+  color: #556B2F;
   text-decoration: none;
 }
 
 a:hover {
-  color:
+  color: #556B2F;
+  font-weight: bold;
 }
 
 a:visited {
-  color:
+  color: #556B2F;
+  text-decoration: line-through;
 }
