--- a/Phone-Case /home.css
+++ b/Phone-Case /home.css
@@ -13,16 +13,17 @@ body {
 }
 
 #brand {
-  font-family: Indie Flower;
+  font-family: Cedarville Cursive;
   font-size: 3em;
-  margin-top: -20px;
+  margin-top: 35px;
   margin-left: 30px;
   display: inline-block;
+  color: #006400;
 }
 
 #logo {
   margin-left: 10px;
-
+  float: left;
 }
 
 #menu {
@@ -33,10 +34,10 @@ body {
 }
 
 #product {
-  margin-top: 5px;
+  margin-top: 8px;
   width: 1425px;
   height: 500px;
-  background-color: #556B2F;
+  background-color: #006400;
   font-family: Open Sans Condensed;
   font-size: 2em;
   color: #E5E5E5;
@@ -54,7 +55,7 @@ body {
 }
 
 #track {
-  margin-top: 5px;
+  margin-top: 8px;
   width: 1425px;
   height: 500px;
   background-color: #C4C4C4;
@@ -63,16 +64,16 @@ body {
 
 
 a:link {
-  color: #556B2F;
+  color: #006400;
   text-decoration: none;
 }
 
 a:hover {
-  color: #556B2F;
+  color: #006400;
   font-weight: bold;
 }
 
 a:visited {
-  color: #556B2F;
+  color: #006400;
   text-decoration: line-through;
 }
