--- a/Phone-Case /shop.css
+++ b/Phone-Case /shop.css
@@ -10,6 +10,7 @@ body {
   font-family: Open Sans Condensed;
   font-size: 1.25em;
   display: inline-block;
+  border: 1px solid #006400;
 }
 
 #brand {
@@ -33,6 +34,78 @@ body {
   margin-top: 145px;
   margin-right: 20px;
 }
+
+#seven {
+  width:250px;
+  height: 300px;
+  background-color: #C4C4C4;
+  margin-top: 20px;
+  margin-left: 100px;
+  display: inline-block;
+  border: 1px solid #006400;
+  float: left;
+}
+
+#sevenex {
+  width: 800px;
+  height: 300px;
+  margin-left: 40px;
+  background-color: #C4C4C4;
+  display: inline-block;
+  border: 1px solid #006400;
+  margin-top: 20px;
+
+}
+
+#six {
+  width:250px;
+  height: 300px;
+  background-color: #C4C4C4;
+  margin-top: 20px;
+  margin-left: 100px;
+  display: inline-block;
+  border: 1px solid #006400;
+  float: left;
+
+}
+
+#sixex {
+  width: 800px;
+  height: 300px;
+  margin-left: 40px;
+  background-color: #C4C4C4;
+  display: inline-block;
+  border: 1px solid #006400;
+  margin-top: 20px;
+}
+
+#samsung{
+  width:250px;
+  height: 300px;
+  background-color: #C4C4C4;
+  margin-top: 20px;
+  margin-left: 100px;
+  display: inline-block;
+  border: 1px solid #006400;
+  float: left;
+}
+
+#samsungex {
+  width: 800px;
+  height: 300px;
+  margin-left: 40px;
+  background-color: #C4C4C4;
+  display: inline-block;
+  border: 1px solid #006400;
+  margin-top: 20px;
+}
+
+.phone {
+  color: #6B8E23;
+  padding-left: 40px;
+  font-weight: bold;
+}
+
 
 a:link {
   color: #006400;
