--- a/Phone-Case /contact.css
+++ b/Phone-Case /contact.css
@@ -10,13 +10,14 @@ body {
   font-family: Open Sans Condensed;
   font-size: 1.25em;
   display: inline-block;
+  border: 1px solid #006400;
 }
 
 #brand {
   font-family: Cedarville Cursive;
   font-size: 3em;
   margin-top: 35px;
-  margin-left: 50px;
+  margin-left: 80px;
   display: inline-block;
   color: #006400;
 }
@@ -32,6 +33,16 @@ body {
   display: inline-block;
   margin-top: 145px;
   margin-right: 20px;
+}
+
+#contact{
+  background-color: #E5E5E5;
+  height:450px;
+  width: 1375px;
+  margin-left: 10px;
+  margin-top: 12px;
+  padding-left: 30px;
+  padding-top:50px;
 }
 
 a:link {
