--- a/Phone-Case /contact.css
+++ b/Phone-Case /contact.css
@@ -37,12 +37,15 @@ body {
 
 #contact{
   background-color: #E5E5E5;
-  height:450px;
+  height:350px;
   width: 1375px;
   margin-left: 10px;
-  margin-top: 12px;
+  margin-top: 25px;
   padding-left: 30px;
   padding-top:50px;
+  font-size: 2em;
+  color: #006400;
+  font-family: Open Sans Condensed;
 }
 
 a:link {
