--- a/ps-08/open.css
+++ b/ps-08/open.css
@@ -2,15 +2,43 @@ body {
   background-color: #000000;
 }
 
+#name {
+  line-height: .3;
+}
+
 h1 {
 font-family: Shrikhand;
-margin-left: 12%;
-margin-top: 12%;
+margin-left: 14%;
+margin-top: 14%;
 color: #ffffff;
+}
+
+p {
+  font-family: Nunito;
+  margin-top: 1%;
+  margin-left: 21%;
+
 }
 
 canvas {
   border: .6px solid #ffffff;
-  margin-left: 25%;
+  margin-left: 31%;
   margin-top: 2%;
+}
+
+a:link {
+  color: #1B93E3;
+  text-decoration: none;
+}
+
+
+a:hover {
+  color: #E31B43;
+  font-style: italic;
+}
+
+
+a:visited {
+  color: #E31B43;
+  text-decoration: line-through;
 }
