--- a/ps-09/snow.css
+++ b/ps-09/snow.css
@@ -4,7 +4,38 @@ body {
 
 h1 {
   font-family: Shrikhand;
-  margin-top: 5%;
+  margin-top: 6.25%;
   margin-left: 5%;
   color: #002533;
+}
+
+#head {
+  line-height: .3;
+}
+
+p {
+  margin-left: 5%;
+  font-family: Montserrat;
+}
+
+#snow {
+  margin-left: 15%;
+  margin-top: 3%;
+  background-color: #ffffff;
+  border: .25px solid #dcdcdc;
+}
+
+a:link {
+  color: #005e80;
+  text-decoration:none;
+}
+
+a:hover {
+ color: #005e80;
+ font-weight: bold;
+}
+
+a:visited {
+   color: #002533;
+   text-decoration: line-through;
 }
