--- a/ps-09/snow.css
+++ b/ps-09/snow.css
@@ -21,7 +21,7 @@ p {
 #snow {
   margin-left: 15%;
   margin-top: 3%;
-  background-color: #ffffff;
+  background-color: #F8F8FF;
   border: .25px solid #dcdcdc;
 }
 
