--- a/ps-10/graph.css
+++ b/ps-10/graph.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #F8F8FF;
+  background-color: #EEFBFE;
 }
 
 h1 {
@@ -31,4 +31,44 @@ a:hover {
 a:visited {
    color: #002533;
    text-decoration: line-through;
+}
+
+svg {
+  float: left;
+  border: 1px solid black;
+  background-color: white;
+  margin-left: 15%;
+  margin-top: 1.5%;
+  display: inline-block;
+}
+
+#voted {
+  float: right;
+  display: inline-block;
+  margin-right: 10%;
+  margin-top: 4%;
+  border: 1px solid black;
+}
+
+#caption {
+  float: right;
+  display: inline-block;
+  font-size: .75;
+  margin-right: 10%;
+  margin-top: 1%;
+}
+
+#source {
+  width: 500;
+  float: left;
+  clear: right;
+  display: inline-block;
+  font-size: .75;
+  margin-top: 37%;
+  margin-left: -37%;
+}
+
+circle {
+  r: 10;
+  fill: black;
 }
