--- a/ps-12/index.css
+++ b/ps-12/index.css
@@ -1,18 +1,25 @@
 #booth {
-  margin-top: -5%;
+  margin-top: -1%;
+}
+
+#byline {
+  color: white;
+  font-size: 1.5em;
+  margin-left: 1170px;
+  margin-top: -135px;
 }
 
 #voted {
   font-size: 6em;
-  margin-top: -800px;
-  margin-left: 100px;
+  margin-top: -850px;
+  margin-left: 85px;
   color: white;
 }
 
 #count {
-  font-size: 6em;
-  margin-top: 330px;
-  margin-left: 800px;
+  font-size: 8em;
+  margin-top: 350px;
+  margin-left: 700px;
   color: white;
 }
 
@@ -22,4 +29,13 @@
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 30px;
+  margin-left: 400px;
+  margin-top: 225px;
+
+}
+
+#heading {
+  color: red;
+  font-size: 2em;
+  margin-left: -80px;
 }
