in class changes

--- a/ps-12/index.css
+++ b/ps-12/index.css
@@ -30,7 +30,7 @@
 
 #intro {
   width: 500px;
-  height: 800px;
+  height: 600px;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 30px;
@@ -39,8 +39,43 @@
 
 }
 
-#heading {
+.heading {
   color: red;
   font-size: 3em;
   margin-left: -80px;
+}
+
+#sign {
+  margin-left: 1235px;
+  margin-top: -30px;
+}
+
+#compare {
+  background-color: #F9F8F2;
+  margin-top: 40px;
+  margin-left: 120px;
+  display: inline-block;
+  float: left;
+}
+
+#explain {
+  width: 600px;
+  height: 600px;
+  margin-top: 150px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 20px;
+  display: inline-block;
+  float: right;
+}
+
+#time {
+  width: 500px;
+  height: 600px;
+  padding-left: 50px;
+  padding-right: 50px;
+  padding-top: 30px;
+  margin-top: -225px;
+  margin-left: 400px;
+  display:inline-block;
 }
